2006-04-25  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Click on background leaves scale mode and enters
	show desktop mode. (Dan Winship)

	* plugins/minimize.c (minHandleEvent): Initialize scale and
	translate properly.

	* src/window.c (activateWindow):
	* src/event.c (handleEvent):
	* src/screen.c: Add window parameter to leaveShowDesktopMode and
	use this function for making one window leave show desktop mode.
	Fixes so that we're leaving show desktop mode when no windows
	are longer hidden.

	* plugins/scale.c (scaleSetScreenOption): Add missing break statement.

	* plugins/rotate.c (rotateInitScreen): Initialize rotateHandle.

	* src/paint.c (paintScreen): Only paint windows that have been 
	damaged.

2006-04-24  Dan Winship  <danw@novell.com>

	* plugins/scale.c: 
	* plugins/switcher.c: clarify the "initiate" descriptions

	* plugins/compiz.schemas: regen

2006-04-24  David Reveman  <davidr@novell.com>

	* src/paint.c (paintScreen): Always call paintWindow when window
	is visible. Fixes so that window animations (fade, minimize...) aren't
	paused when if window becomes invisible.
	(paintWindow): Return early if region is empty.

	* plugins/switcher.c: Use hideWindow and showWindow so that the
	decoration doesn't have to be redrawn every time the switcher window
	is mapped.

	* src/window.c:
	* include/compiz.h: Add hidden flag, that can be used to hide windows
	without minimizing them.

	* plugins/compiz.schemas: Regen (drop-shadow options).

	* configure.ac: xrender 0.9, required for g-w-d.

	* gnome/window-decorator/gnome-window-decorator.c:
	* plugins/decoration.c: Add configurable drop-shadows. A minor issue is
	that shadows around "tiny" windows are not rendered correctly when
	large shadow offsets are used. Solution is to have the decorator set
	a minimum size for which a decoration can be used so that no shadows
	are rendered around "tiny" windows.

2006-04-20  Dan Winship  <danw@novell.com>
